<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >   
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView 
	            android:id="@+id/fragmentAboutTxtViewVersionTitle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            style="@style/TextViewAbout"
	            android:text="@string/about_fragment_version"/>
     	    <TextView 
	            android:id="@+id/fragmentAboutTxtViewVersion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4dp"
	            style="@style/TextViewAbout"
	            android:text="@string/app_version"/>
        </LinearLayout>
        
        <TextView 
            android:id="@+id/fragmentAboutTxtViewAuthorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            style="@style/TextViewAbout"
            android:text="@string/about_fragment_author_title"/>
        <TextView 
            android:id="@+id/fragmentAboutTxtViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/TextViewAbout"
            android:text="@string/about_fragment_author"/>
        <TextView 
            android:id="@+id/fragmentAboutTxtViewCoAuthorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            style="@style/TextViewAbout"
            android:text="@string/about_fragment_coworkers_title"/>
         <TextView 
            android:id="@+id/fragmentAboutTxtViewCoAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/TextViewAbout"
            android:text="@string/about_fragment_coworkers"/>
        <TextView 
            android:id="@+id/fragmentAboutTxtViewLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/TextViewAbout"
            android:text="@string/about_fragment_license"/>
    </LinearLayout>


</RelativeLayout>