<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/orcamento_dialog_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/orcamento_dialog_tipo" />

                <Spinner
                    android:id="@+id/addOrcamentoDialogSpinnerTipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/orcamento_dialog_descricao" />

                <EditText
                    android:id="@+id/addOrcamentoDialogEditTxtValor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:hint="@string/orcamento_dialog_descricao_hint" />
            </LinearLayout>
        </LinearLayout>
        <Button 
            android:id="@+id/orcamentoDialogBtnData"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Janeiro"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>