<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        
        <ImageView 
            android:id="@+id/contaListItemImgIcon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="centerInside"/>
            
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="8"
	        android:orientation="vertical">
	        
	        <RelativeLayout 
	            android:padding="10dp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
		        <TextView 
		            android:id="@+id/contaListItemTxtNome"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="18sp"
		            android:text="Banco do Brasil"/>
		        
		        <LinearLayout 
		            android:layout_width="wrap_content"
		            android:layout_height="40dp"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:orientation="horizontal">
		            <com.beardedhen.androidbootstrap.BootstrapButton 
			            android:id="@+id/contaListItemBtnPagarFatura"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:visibility="gone"
			            android:text="@string/contas_list_item_cartao_pay"
						bootstrap:bb_type="default"
						bootstrap:bb_roundedCorners="true"
						bootstrap:bb_size="small"/>
		            <com.beardedhen.androidbootstrap.BootstrapButton 
			            android:id="@+id/contaListItemBtnEditConta"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="5dp"
			            android:text="@string/contas_list_item_cartao_edit"
						bootstrap:bb_type="default"
						bootstrap:bb_roundedCorners="true"
						bootstrap:bb_size="small"/>	            
		        </LinearLayout>
		        
            </RelativeLayout>
	        
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	            <TextView
	                android:id="@+id/contaListItemTxtDebitos" 
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:textColor="#ff0000"
	                android:text="@string/default_currency_value" 
	                android:maxLines="2"/>
	            
	            <TextView
	                android:id="@+id/contaListItemTxtCreditos" 
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:textColor="@color/dark_green"
	                android:text="@string/default_currency_value"
	                android:maxLines="2"/>
	            
	            <TextView 
	                android:id="@+id/contaListItemTxtSaldo"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:text="@string/default_currency_value"
	                android:maxLines="2"/>
	        </LinearLayout>
	    </LinearLayout>
	</LinearLayout>
</RelativeLayout>
